--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/af-logo.svg" />
+    <link rel="apple-touch-icon" href="/af-logo.svg" />
+    <meta name="theme-color" content="#00e676" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdulrasaq Falade</title>
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Zen+Kurenaido&display=swap" rel="stylesheet">
